[package]
name = "actix-web-example"
version = "0.1.0"
authors = ["Njuguna Mureithi <mureithinjuguna@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
apalis = { path = "../../", features = ["redis"] }
serde = "1"
actix = "0.12.0"
actix-rt = "2.5.0"
env_logger = "0.7"
actix-web = "4.0.0-beta.13"
actix-web-actors = "4.0.0-beta.7"